force-app/main/default/objects/Project_Line_Item__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arquitecto</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>Desarrollador</fullName>
            </value>
            <value>
                <fullName>Project_Manager</fullName>
                <label>Project Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>