force-app/main/default/objects/Project_Line_Item__c/fields/Sold_Role_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sold_Role_Hours__c</fullName>
    <label>Sold Role Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>